--- a/argocd-vault-plugin-application.yaml
+++ b/argocd-vault-plugin-application.yaml
@@ -15,9 +15,9 @@ spec:
       exclude: '{values.yaml,LISCENSE,README.md,manifests/*,merge/*}'
     kustomize:
       resources:
-        - manifest/cmp-plugin.yaml
-        - manifest/role.yaml
-        - manifest/role-binding.yaml
+        - manifests/cmp-plugin.yaml
+        - manifests/role.yaml
+        - manifests/role-binding.yaml
       patchesStrategicMerge:
         - merge/argocd-repo-server.yaml
   destination:
